--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,43 @@
+html,
+body {
+    width: 100%;
+    height: 100%;
+    /* Prevent pinch-to-zoom on iOS Safari */
+    touch-action: pan-x pan-y;
+}
+
+html {
+    overflow: hidden;
+}
+body {
+    overflow-y: hidden;
+}
+
+.app {
+    width: 100%;
+    height: 100%;
+}
+
+.incidentList {
+    position: absolute;
+    z-index: 2;
+    top: 70px;
+    width: 100vw;
+    height: calc(var(--innerVh) - 70px);
+    overflow-y: scroll;
+    background: #333;
+    color: #fff;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s, visibility 0.3s;
+}
+
+.incidentList.visible {
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 0.3s, visibility 0.3s;
+}
+
 .incidentList h2 {
     font-size: 1em;
 }
@@ -12,6 +52,33 @@
 .incidentList ul li h2,
 .incidentList ul li p {
     margin: 0;
+}
+
+.incidentListHeader {
+    position: absolute;
+    top: 0;
+    z-index: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: calc(100% - 20px);
+    height: 50px;
+    padding: 10px;
+    background: #333;
+    color: #fff;
+}
+
+.incidentListHeader button {
+    border-radius: 0;
+}
+
+.mapContainer {
+    position: absolute;
+    z-index: 1;
+    top: 70px;
+    width: 100vw;
+    height: calc(var(--innerVh) - 70px);
+    color: #333;
 }
 
 /* Remove the blue border around InfoWindow close buttons. */
