--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
+/* --- Document --- */
+
 html,
 body {
     width: 100%;
     height: 100%;
+
     /* Prevent pinch-to-zoom on iOS Safari */
     touch-action: pan-x pan-y;
 }
@@ -14,17 +17,30 @@ body {
     overflow-y: hidden;
 }
 
+/* --- App container --- */
+
+/* On mobile, fill the viewport. */
 .app {
     width: 100%;
     height: 100%;
 }
 
+/* On desktop, create a two-column layout. */
+@media (min-width: 800px) {
+    .app {
+        display: flex;
+    }
+}
+
+/* --- Incident list --- */
+
+/* On mobile, hide the list by default, and absolutely position it. */
 .incidentList {
     position: absolute;
     z-index: 2;
     top: 70px;
     width: 100vw;
-    height: calc(var(--innerVh) - 70px);
+    height: calc(var(--innerVh) - 70px); /* Viewport height minus the header. */
     overflow-y: scroll;
     background: #333;
     color: #fff;
@@ -33,6 +49,18 @@ body {
     transition: opacity 0.3s, visibility 0.3s;
 }
 
+/* On desktop, always show the list in a column on the left. */
+@media (min-width: 800px) {
+    .incidentList {
+        position: static;
+        width: 350px;
+        height: 100vh;
+        opacity: 1;
+        visibility: visible;
+    }
+}
+
+/* On mobile, show/hide the list when the Show Incidents button is toggled. */
 .incidentList.visible {
     opacity: 1;
     visibility: visible;
@@ -46,7 +74,7 @@ body {
 
 .incidentList ul {
     list-style: none;
-    margin: 0;
+    margin: 0 0 80px 0; /* Add bottom margin to work around a bug/issue with iPhone Safari in landscape. */
     padding: 0;
     font-size: 0.8em;
     border-top: 1px solid #888;
@@ -68,6 +96,9 @@ body {
     padding: 0;
 }
 
+/* --- Incident list header with button --- */
+
+/* On mobile, display the header at the top of the screen. */
 .incidentListHeader {
     position: absolute;
     top: 0;
@@ -82,18 +113,41 @@ body {
     color: #fff;
 }
 
+/* On desktop, hide the header. */
+@media (min-width: 800px) {
+    .incidentListHeader {
+        display: none;
+    }
+}
+
 .incidentListHeader button {
     border-radius: 0;
 }
 
+/* --- Map container --- */
+
+/* On mobile, position the map absolutely and give it a 100% width. */
 .mapContainer {
-    position: absolute;
+    position: absolute !important; /* Override inline style applied by react-google-maps */
     z-index: 1;
     top: 70px;
     width: 100vw;
-    height: calc(var(--innerVh) - 70px);
+    height: calc(var(--innerVh) - 70px); /* Viewport height minus the header. */
     color: #333;
 }
+
+/* On desktop, position the map relatively and allow room for the left-hand incident list sidebar. */
+@media (min-width: 800px) {
+    .mapContainer {
+        position: relative !important; /* Override inline style applied by react-google-maps */
+        top: 0;
+        flex-grow: 1;
+        width: calc(100vw - 350px);
+        height: var(--innerVh);
+    }
+}
+
+/* ---Map styles --- */
 
 /* Remove the blue border around InfoWindow close buttons. */
 button.gm-ui-hover-effect:focus {
