--- a/src/App.css
+++ b/src/App.css
@@ -129,7 +129,7 @@ body {
 .incidentListHeader {
     position: absolute;
     top: 0;
-    z-index: 1;
+    z-index: 3;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -139,6 +139,7 @@ body {
     background: #333;
     color: #fff;
     font-weight: bold;
+    border-bottom: 1px solid #888;
 }
 
 /* On desktop, hide the header. */
