Highlight selected incident in list
When an incident is selected in the map, highlight it in the incidents
list, and scroll to it if necessary.

--- a/src/App.css
+++ b/src/App.css
@@ -112,8 +112,11 @@ body {
 }
 
 .incidentList ul li:hover {
-    padding: 10px;
-    background: #666;
+    background: #444;
+}
+
+.incidentList ul li.selected {
+    background: #777;
 }
 
 .incidentList ul li h2 {
