When a list item is clicked, display incident on map
-   Add a click hander to each list item. The handler selects the
    incident, pans and zooms the map to its marker, and opens its info
    window.

-   Rewrite the info window code using the native
    `google.maps.InfoWindow` class. react-google-maps-api's
    implementation is too buggy, resulting in duplicate info windows on
    the map.

-   Improve the auto-scrolling of the incident list so that it is not
    scrolled if the list item is already in view. This avoids the list
    item jumping around so much when it is selected.

--- a/src/App.css
+++ b/src/App.css
@@ -181,6 +181,10 @@ body {
 
 /* ---Map styles --- */
 
+.infoWindow {
+    margin-right: 12px;
+}
+
 /* Remove the blue border around InfoWindow close buttons. */
 button.gm-ui-hover-effect:focus {
     outline: none;
